--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 nav {
-    background: #1a1a1a;
+    background: lightgray;
     width: 100%;
     padding: 10px 10%;
     display: flex;
@@ -22,4 +22,14 @@ nav {
 
 }
 
+.logo {
+    width: 120px;
+}
+
+.user {
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 30px;
+}
  
