--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ nav {
 
 .logo {
     width: 120px;
+    border-radius: 25px;
+    /* border: 2px solid red; */
 }
 
 .user {
@@ -31,5 +33,21 @@ nav {
     border-radius: 50%;
     cursor: pointer;
     margin-left: 30px;
+}
+
+nav ul {
+    width: 100%;
+    text-align: right;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    color: black;
+    text-decoration: none;
 }
  
