--- a/style.css
+++ b/style.css
@@ -50,4 +50,22 @@ nav ul li a {
     color: black;
     text-decoration: none;
 }
- 
+
+
+.sub-menu-wrap img {
+    width: 50px;
+    border-radius: 25px;
+}
+
+.sub-menu-wrap {
+    position: absolute;
+    top: 100%;
+    right: 9%;
+    width: 200px;
+}
+
+.sub-menu {
+    background: red;
+    padding: 20px;
+    margin: 10px;
+}
