--- a/style.css
+++ b/style.css
@@ -69,3 +69,12 @@ nav ul li a {
     padding: 20px;
     margin: 10px;
 }
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info img {
+    margin-right: 15px;
+}
